--- a/Source/styles/style.css
+++ b/Source/styles/style.css
@@ -1,105 +1,130 @@
-*{margin:0 auto;padding:0;}
-body
+html, body 
 {
-margin:0px auto;
-width:960px;
-font: .9em Verdana;
-color:#036;
+	margin: 0;
+	padding: 0;
+	height:100%
 }
 
-header
+#header
 {
-clear:both;
-overflow:auto;
-max-width:940px;
-background:#5BBFC2;
-padding:10px;
-}
-header h1 {
-	font: bold 2.5em Georgia;
-	margin: 2% 2% 4% 2%; 
-}
-nav ul
-{
-	list-style: none;
-display:block;
-background:#036;  
-padding:10px;
-margin:0px;
+	background-color: #202020;
+	width: 100%;
+	height: 110px;
+	padding-top: 30px;
 }
 
-nav ul li
+#navigationHeader
 {
-display:inline;
-list-style: none;
+    border-radius: 5px;
+	margin: 0 auto;
+    background-color: #E0E0E0;
+    padding: 20px; 
+    width: 950px;
+    height: 40px; 
+	top: 25px;
 }
 
-nav ul li a
+#main
 {
- font: 1.1em Verdana;
- text-decoration:none;
- width: 100%;
- color:#FFF;
- padding:10px;
- border-right:1px solid #FFF;
+	height: 100%;
+	background: #202020;
+	background: -moz-linear-gradient(top,  #202020 0%, #202020 50%, #E0E0E0  50%, #E0E0E0  100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#202020), color-stop(50%,#202020), color-stop(50%,#E0E0E0 ), color-stop(100%,#E0E0E0 ));
+	background: -webkit-linear-gradient(top,  #202020 0%,#202020 50%,#E0E0E0  50%,#E0E0E0  100%);
+	background: -o-linear-gradient(top,  #202020 0%,#202020 50%,#E0E0E0  50%,#E0E0E0  100%);
+	background: -ms-linear-gradient(top,  #202020 0%,#202020 50%,#E0E0E0  50%,#E0E0E0  100%);
+	background: linear-gradient(to bottom,  #202020 0%,#202020 50%,#E0E0E0  50%,#E0E0E0  100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#202020', endColorstr='#E0E0E0 ',GradientType=0 );
 }
 
-nav ul li a:hover
+#content
 {
- text-decoration:none;
- color:#FFF;
- background:#5BBFC2;
- border:1px solid #FFF;
+    border-radius: 5px;
+	margin: 0 auto;
+	width: 990px;
+	height: 90%;
+	background-color: #E0E0E0;
+	box-shadow: 0px 0px 8px 2px #202020;
 }
 
-#wrapper
-{
-clear:both;
-overflow:auto;
-width:100%;
+.logo{
+	height: 60px;
+	width: 65px;
+	margin-top: -10px;
+	padding-left: 5px;
+	z-index:5;
 }
 
-#wrapper aside
-{
-width:160px;
-min-height: 500px;
-max-height: 100%;
-padding:5px;
-background:#5BBFC2;
-float:left;
+.myButton {
+	-moz-box-shadow:inset 0px 1px 3px 0px #8c8c8c;
+	-webkit-box-shadow:inset 0px 1px 3px 0px #8c8c8c;
+	box-shadow:inset 0px 1px 3px 0px #8c8c8c;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #575757), color-stop(1, #202020));
+	background:-moz-linear-gradient(top, #575757 5%, #202020 100%);
+	background:-webkit-linear-gradient(top, #575757 5%, #202020 100%);
+	background:-o-linear-gradient(top, #575757 5%, #202020 100%);
+	background:-ms-linear-gradient(top, #575757 5%, #202020 100%);
+	background:linear-gradient(to bottom, #575757 5%, #202020 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#575757', endColorstr='#202020',GradientType=0);
+	background-color:#575757;
+	-moz-border-radius:10px;
+	-webkit-border-radius:10px;
+	border-radius:10px;
+	display:inline-block;
+	cursor:pointer;
+	text-align: center;
+	width: 55px;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	float: right;
+	margin-left: 8px;
+	padding:11px 23px;
+	text-decoration:none;
+	text-shadow:0px -1px 0px #666666;
 }
 
-#wrapper section
-{
-min-width:780px;
-max-width: 80%;
-min-height: 510px;
-background:#FFF;
-float:left;
-border-right: 10px solid #036;
-}
-#wrapper section p {
-	padding:20px 5px 0 5px;
-	max-width: 90%;
-}
-#wrapper section h2 {
-	max-width: 90%;
-	padding-top: 10px;
-}
-footer
-{
-background-color: #036;
-min-height: 50px;
+.myButton:hover{
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ff6600));
+	background:-moz-linear-gradient(top, #fb9e25 5%, #ff6600 100%);
+	background:-webkit-linear-gradient(top, #fb9e25 5%, #ff6600 100%);
+	background:-o-linear-gradient(top, #fb9e25 5%, #ff6600 100%);
+	background:-ms-linear-gradient(top, #fb9e25 5%, #ff6600 100%);
+	background:linear-gradient(to bottom, #fb9e25 5%, #ff6600 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fb9e25', endColorstr='#ff6600',GradientType=0);
+	background-color:#fb9e25;
 }
 
-footer p
-{
-text-align:center;
-color:#999;
-padding-top: 1.5%
+.myButton:active {
+	position:relative;
+	top:1px;
 }
-table {
-	font-size: 90%;
-	padding-left: 10px;
+
+.currentButton {	
+	-moz-box-shadow:inset 0px 1px 3px 0px #8c8c8c;
+	-webkit-box-shadow:inset 0px 1px 3px 0px #8c8c8c;
+	box-shadow:inset 0px 1px 3px 0px #8c8c8c;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ff6600));
+	background:-moz-linear-gradient(top, #fb9e25 5%, #ff6600 100%);
+	background:-webkit-linear-gradient(top, #fb9e25 5%, #ff6600 100%);
+	background:-o-linear-gradient(top, #fb9e25 5%, #ff6600 100%);
+	background:-ms-linear-gradient(top, #fb9e25 5%, #ff6600 100%);
+	background:linear-gradient(to bottom, #fb9e25 5%, #ff6600 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fb9e25', endColorstr='#ff6600',GradientType=0);
+	background-color:#fb9e25;
+	-moz-border-radius:10px;
+	-webkit-border-radius:10px;
+	border-radius:10px;
+	display:inline-block;
+	cursor:pointer;
+	text-align: center;
+	width: 55px;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	float: right;
+	margin-left: 5px;
+	padding:11px 23px;
+	text-decoration:none;
+	text-shadow:0px -1px 0px #666666;
 }
-.clear {clear: both;}
