--- a/Source/styles/style.css
+++ b/Source/styles/style.css
@@ -82,6 +82,85 @@ html, body
 	box-shadow: 0px 0px 8px 2px #202020;
 }
 
+#createRequest
+{
+    border-radius: 5px;
+	width: 275px;
+	height: 200px;
+	float: left;
+	margin-left: 350px;
+	margin-top: 150px;
+	background: #202020;
+	background: -moz-linear-gradient(top,  #202020 0%, #202020 25%, #E0E0E0  25%, #E0E0E0  100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#202020), color-stop(25%,#202020), color-stop(25%,#E0E0E0 ), color-stop(100%,#E0E0E0 ));
+	background: -webkit-linear-gradient(top,  #202020 0%,#202020 25%,#E0E0E0  25%,#E0E0E0  100%);
+	background: -o-linear-gradient(top,  #202020 0%,#202020 25%,#E0E0E0  25%,#E0E0E0  100%);
+	background: -ms-linear-gradient(top,  #202020 0%,#202020 25%,#E0E0E0  25%,#E0E0E0  100%);
+	background: linear-gradient(to bottom,  #202020 0%,#202020 25%,#E0E0E0  25%,#E0E0E0  100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#202020', endColorstr='#E0E0E0 ',GradientType=0 );
+	box-shadow: 0px 0px 8px 2px #202020;
+}
+
+#resultTable
+{
+	border-spacing: 20px 0;
+}
+
+#resultTable2
+{
+	border-spacing: 40px 0;
+}
+
+#resultsDiv
+{
+	height: 540px;
+	width:945px;
+	margin-left: 20px;
+	padding-top: 10px;
+	border: 2px solid #202020;
+	border-radius: 5px;
+	overflow-y: scroll;
+	box-shadow: 0px 0px 4px 0.5px #303030;
+}
+
+/*#request
+{
+    border-radius: 5px;
+	width: 450px;
+	height: 380px;
+	float: left;
+	margin-left: 260px;
+	margin-top: 150px;
+	background: #202020;
+	background: -moz-linear-gradient(top,  #202020 0%, #202020 25%, #E0E0E0  25%, #E0E0E0  100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#202020), color-stop(25%,#202020), color-stop(25%,#E0E0E0 ), color-stop(100%,#E0E0E0 ));
+	background: -webkit-linear-gradient(top,  #202020 0%,#202020 25%,#E0E0E0  25%,#E0E0E0  100%);
+	background: -o-linear-gradient(top,  #202020 0%,#202020 25%,#E0E0E0  25%,#E0E0E0  100%);
+	background: -ms-linear-gradient(top,  #202020 0%,#202020 25%,#E0E0E0  25%,#E0E0E0  100%);
+	background: linear-gradient(to bottom,  #202020 0%,#202020 25%,#E0E0E0  25%,#E0E0E0  100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#202020', endColorstr='#E0E0E0 ',GradientType=0 );
+	box-shadow: 0px 0px 8px 2px #202020;
+}*/
+
+#view
+{
+	width: 950px;
+	height: 665px;
+	float: left;
+	margin-left: 20px;
+	margin-top: 20px;
+	background: #E0E0E0;
+}
+
+#infoBox
+{
+	width: 600px;
+	height: 585px;
+	float: left;
+	margin-left: 40px;
+	background: #E0E0E0;
+}
+
 .logo{
 	height: 65px;
 	width: 65px;
@@ -90,76 +169,3 @@ html, body
 	z-index:5;
 }
 
-/*.myButton {
-	-moz-box-shadow:inset 0px 1px 3px 0px #8c8c8c;
-	-webkit-box-shadow:inset 0px 1px 3px 0px #8c8c8c;
-	box-shadow:inset 0px 1px 3px 0px #8c8c8c;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #575757), color-stop(1, #202020));
-	background:-moz-linear-gradient(top, #575757 5%, #202020 100%);
-	background:-webkit-linear-gradient(top, #575757 5%, #202020 100%);
-	background:-o-linear-gradient(top, #575757 5%, #202020 100%);
-	background:-ms-linear-gradient(top, #575757 5%, #202020 100%);
-	background:linear-gradient(to bottom, #575757 5%, #202020 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#575757', endColorstr='#202020',GradientType=0);
-	background-color:#575757;
-	-moz-border-radius:10px;
-	-webkit-border-radius:10px;
-	border-radius:10px;
-	display:inline-block;
-	cursor:pointer;
-	text-align: center;
-	width: 60px;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:15px;
-	float: right;
-	margin-left: 8px;
-	padding:11px 23px;
-	text-decoration:none;
-	text-shadow:0px -1px 0px #666666;
-}
-
-.myButton:hover{
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ff6600));
-	background:-moz-linear-gradient(top, #fb9e25 50%, #ff6600 100%);
-	background:-webkit-linear-gradient(top, #fb9e25 50%, #ff6600 100%);
-	background:-o-linear-gradient(top, #fb9e25 50%, #ff6600 100%);
-	background:-ms-linear-gradient(top, #fb9e25 50%, #ff6600 100%);
-	background:linear-gradient(to bottom, #fb9e25 50%, #ff6600 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fb9e25', endColorstr='#ff6600',GradientType=0);
-	background-color:#fb9e25;
-}
-
-.myButton:active {
-	position:relative;
-	top:1px;
-}
-
-.currentButton {	
-	-moz-box-shadow:inset 0px 1px 3px 0px #8c8c8c;
-	-webkit-box-shadow:inset 0px 1px 3px 0px #8c8c8c;
-	box-shadow:inset 0px 1px 3px 0px #8c8c8c;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ff6600));
-	background:-moz-linear-gradient(top, #fb9e25 50%, #ff6600 100%);
-	background:-webkit-linear-gradient(top, #fb9e25 50%, #ff6600 100%);
-	background:-o-linear-gradient(top, #fb9e25 50%, #ff6600 100%);
-	background:-ms-linear-gradient(top, #fb9e25 50%, #ff6600 100%);
-	background:linear-gradient(to bottom, #fb9e25 50%, #ff6600 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fb9e25', endColorstr='#ff6600',GradientType=0);
-	background-color:#fb9e25;
-	-moz-border-radius:10px;
-	-webkit-border-radius:10px;
-	border-radius:10px;
-	display:inline-block;
-	cursor:pointer;
-	text-align: center;
-	width: 55px;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:15px;
-	float: right;
-	margin-left: 5px;
-	padding:11px 23px;
-	text-decoration:none;
-	text-shadow:0px -1px 0px #666666;
-}*/
