--- a/Source/styles/style.css
+++ b/Source/styles/style.css
@@ -123,42 +123,133 @@ html, body
 	box-shadow: 0px 0px 4px 0.5px #303030;
 }
 
-/*#request
+#searchBox
 {
+	margin-left: 20px;
+	width: 500px;
+    border: 1px solid gray;
     border-radius: 5px;
-	width: 450px;
-	height: 380px;
-	float: left;
-	margin-left: 260px;
-	margin-top: 150px;
+    padding: 10px;
+}
+
+#viewRequestBox
+{
+	margin-left: 20px;
+	margin-bottom: 20px;
+	width: 375px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+#candidates
+{
+	margin-left: 20px;
+	width: 930px;
+	height: 400px;
+    border: 1px solid gray;
+    padding: 10px;
+	border-radius: 5px;
 	background: #202020;
-	background: -moz-linear-gradient(top,  #202020 0%, #202020 25%, #E0E0E0  25%, #E0E0E0  100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#202020), color-stop(25%,#202020), color-stop(25%,#E0E0E0 ), color-stop(100%,#E0E0E0 ));
-	background: -webkit-linear-gradient(top,  #202020 0%,#202020 25%,#E0E0E0  25%,#E0E0E0  100%);
-	background: -o-linear-gradient(top,  #202020 0%,#202020 25%,#E0E0E0  25%,#E0E0E0  100%);
-	background: -ms-linear-gradient(top,  #202020 0%,#202020 25%,#E0E0E0  25%,#E0E0E0  100%);
-	background: linear-gradient(to bottom,  #202020 0%,#202020 25%,#E0E0E0  25%,#E0E0E0  100%);
+	background: -moz-linear-gradient(top,  #202020 0%, #202020 15%, #E0E0E0  15%, #E0E0E0  100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#202020), color-stop(15%,#202020), color-stop(15%,#E0E0E0 ), color-stop(100%,#E0E0E0 ));
+	background: -webkit-linear-gradient(top,  #202020 0%,#202020 15%,#E0E0E0  15%,#E0E0E0  100%);
+	background: -o-linear-gradient(top,  #202020 0%,#202020 15%,#E0E0E0  15%,#E0E0E0  100%);
+	background: -ms-linear-gradient(top,  #202020 0%,#202020 15%,#E0E0E0  15%,#E0E0E0  100%);
+	background: linear-gradient(to bottom,  #202020 0%,#202020 15%,#E0E0E0  15%,#E0E0E0  100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#202020', endColorstr='#E0E0E0 ',GradientType=0 );
-	box-shadow: 0px 0px 8px 2px #202020;
-}*/
+}
 
 #view
 {
 	width: 950px;
-	height: 665px;
+	height: 80%;
 	float: left;
 	margin-left: 20px;
 	margin-top: 20px;
 	background: #E0E0E0;
 }
 
+#staffView
+{
+	width: 950px;
+	height: 80%;
+	float: left;
+	margin-left: 20px;
+	background: #E0E0E0;
+}
+
 #infoBox
 {
 	width: 600px;
-	height: 585px;
+	height: 95%;
 	float: left;
 	margin-left: 40px;
 	background: #E0E0E0;
+}
+
+#editInfoBox
+{
+	width: 550px;
+	height: 92%;
+	float: left;
+	background: #E0E0E0;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding-top: 20px;
+	padding-left:70px;
+	margin-bottom: 10px;
+}
+
+#resultsBox
+{
+	height: 490px;
+	width:945px;
+	margin-left: 20px;
+	margin-top: 20px;
+	border: 1px solid gray;
+	border-radius: 5px;
+	background: #202020;
+	background: -moz-linear-gradient(top,  #202020 0%, #202020 10%, #E0E0E0  10%, #E0E0E0  100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#202020), color-stop(10%,#202020), color-stop(10%,#E0E0E0 ), color-stop(100%,#E0E0E0 ));
+	background: -webkit-linear-gradient(top,  #202020 0%,#202020 10%,#E0E0E0  10%,#E0E0E0  100%);
+	background: -o-linear-gradient(top,  #202020 0%,#202020 10%,#E0E0E0  10%,#E0E0E0  100%);
+	background: -ms-linear-gradient(top,  #202020 0%,#202020 10%,#E0E0E0  10%,#E0E0E0  100%);
+	background: linear-gradient(to bottom,  #202020 0%,#202020 10%,#E0E0E0  10%,#E0E0E0  100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#202020', endColorstr='#E0E0E0 ',GradientType=0 );
+}
+
+#resultsTableBox
+{
+	height: 87%;
+	width:945px;
+	margin-top:10px;
+	overflow-y: scroll;
+}
+
+#managerBox
+{
+	height: 85%;
+	width:920px;
+	margin-left: 20px;
+	margin-top: 20px;
+	border: 1px solid gray;
+	border-radius: 5px;
+	padding: 15px;
+	overflow-y: scroll;
+	background: #E0E0E0;
+}
+
+#links
+{
+	appearance:normal;
+}
+
+.image
+{
+	height: 180px; 
+	width: 160px;
+	border: 1px solid gray
 }
 
 .logo{
