--- a/Source/styles/style.css
+++ b/Source/styles/style.css
@@ -3,6 +3,8 @@ html, body
 	margin: 0;
 	padding: 0;
 	height:100%;
+	width: 100%;
+	min-width: 1000px;
 	font-family: 'HelveticaRegular',Helvetica,Arial;
 }
 
@@ -10,6 +12,7 @@ html, body
 {
 	background-color: #202020;
 	width: 100%;
+	min-width: 1000px;
 	height: 110px;
 	padding-top: 30px;
 }
@@ -28,6 +31,9 @@ html, body
 #main
 {
 	height: 100%;
+	width: 100%;
+	min-width: 1000px;
+	min-height: 775px;
 	background: #202020;
 	background: -moz-linear-gradient(top,  #202020 0%, #202020 50%, #E0E0E0  50%, #E0E0E0  100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#202020), color-stop(50%,#202020), color-stop(50%,#E0E0E0 ), color-stop(100%,#E0E0E0 ));
@@ -42,7 +48,9 @@ html, body
 {
 	margin: 0px;
 	height: 20px;
-	padding: 5px;	
+	min-width: 1000px;
+	padding-top: 5px;	
+	padding-bottom: 5px;	
 	background: #E0E0E0;
 	background: -moz-linear-gradient(top,  #E0E0E0 0%, #E0E0E0 0%, #202020 12%, #202020 12%, #202020 18%, #202020 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#E0E0E0), color-stop(0%,#E0E0E0), color-stop(12%,#202020), color-stop(12%,#202020), color-stop(18%,#202020), color-stop(100%,#202020));
@@ -59,18 +67,20 @@ html, body
 	margin: 0 auto;
 	width: 990px;
 	height: 90%;
+	min-height: 750px;
 	background-color: #E0E0E0;
 	box-shadow: 0px 0px 8px 2px #202020;
 }
 
 #loginMain
 {
+	position: relative;
     border-radius: 5px;
 	width: 275px;
 	height: 200px;
 	float: left;
 	margin-left: 350px;
-	margin-top: 150px;
+	margin-top: 200px;
 	background: #202020;
 	background: -moz-linear-gradient(top,  #202020 0%, #202020 25%, #E0E0E0  25%, #E0E0E0  100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#202020), color-stop(25%,#202020), color-stop(25%,#E0E0E0 ), color-stop(100%,#E0E0E0 ));
